# tiny386hen

./: .gitignore  .gitmodules  LICENSE  README.md  README.zh-CN.md  plan.md  task34.md  task54.md
.githooks/: pre-commit
copyright/: README.zh-CN.md
docs/: jit-benchmark-results.md  jit-dev-plan.md  lightide-storage-plan.md  lightvga-display-plan.md
make/: build-ili9341.ps1  build-ili9341.sh
make/esp-ili9341/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.ili9341  tiny386.ini
make/esp-ili9341/main/: CMakeLists.txt  idf_component.yml  linker.lf
patches/: CO40.COM
patches/submodules/: 0001-Increase-ESP32-i386-TLB-size.patch  0001-Place-ESP32-OPL-tables-in-external-BSS.patch  README.md
release/esp/: flash-files.txt  flash-ili9341.ps1  flash-ili9341.sh  tiny386.ini
script/: build-ili9341.ps1  build-ili9341.sh  build-seabios.ps1  build-seabios.sh  pack-resources.py
src/emu8950/: emu8950.c  emu8950.h  emuadpcm.c  emuadpcm.h
src/esp/main/: adlib.c  board_ili9341.h  common.h  debugcon.c  debugcon.h  esp_main.c  flash_stdio.c  i2s.c  jit_lx7.c  jit_lx7.h  jit_lx7_mov_rr.S  jit_selftest.c  jit_selftest.h  jit_x86.h  lcd_ili9341.c  lightvga.c  sdmmc_crc_wrap.c  startup_splash.c  startup_splash.h  storage.c  timestamp_stdio.c  timestamp_stdio.h  usb_input.c  vga.c  wifi.c
src/tiny386/: i386.c  i386.h  ide.c  pc.c  pc.h
tools/: bench_capture.py  dosbench.asm  gdbinit_jit.gdb  inject_dosbench.py  jtag_debug.ps1  run_ini_jit_matrix.py  serial_capture.py
